--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,12 +59,12 @@ footer a {
 section {
         padding: 60px;
     }
-.hero{
-     background-image: url("../images/hero-bg.jpg");
-     height: 700px;
-     background-image: cover;
-     background-position: center;
-     position: relative;
+    .hero {
+        background-image: url("../images/hero-bg.jpg");
+        height: 700px;
+        background-size: cover;
+        background-position: center;
+        position: relative;
     }
 .hero-form{
             background-color: #fce138;
