--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,15 +48,18 @@ footer {
         background: #fce138;
         width: 100%;
         padding: 40px 35px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 footer h2 {
-        display: inline;
+        
         color: #024e76;
         font-size: 30px;
         margin: 0;
     }
 footer div {
-        float: right;
+        
         line-height: 1.5;
         text-align: right;
     }
@@ -68,27 +71,26 @@ section {
     }
     .hero {
         background-image: url("../images/hero-bg.jpg");
-        height: 700px;
+        display: flex;
         background-size: cover;
         background-position: center;
-        position: relative;
+        justify-content: center;
+        flex-wrap: wrap;
+        
     }
 .hero-form{
             background-color: #fce138;
             padding: 20px;
-            width: 500px;
             color: #024e76;
             border: solid 3px #024e76;
-            position: absolute;
-            bottom: 120px;
-            right: 140px;
         }
 .hero-form h3{
     font-size: 24px;
     margin: 0;
     }
 .hero-form p{
-    margin: 5px 0 15px 0;
+    margin: 3.5%;
+    width: 40%;
     }
 .form-input{
     border: 1px solid #024e76;
@@ -109,6 +111,19 @@ section {
         padding: 10px 20px;
         font-size: 16px;
     }
+    .hero-cta {
+        width: 35%;
+        text-align: right;
+        margin: 3.5%;
+        color: #fff;
+        font-size: 18px;
+        line-height: 1.3;
+      }
+    .hero-cta h2 {
+        font-style: italic;
+        font-size: 55px;
+        color: #fce138;
+      }
 .intro {
         text-align: center;
     }
