--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ header a {
             color: #fce138;
         }
 header nav {
-            
             margin: 7px 0;
         }
 header nav ul   {
@@ -28,7 +27,7 @@ header nav ul   {
             list-style: none;
         }
 header nav ul li a {
-            margin: 0 30px;
+            padding: 10px 15px;
             font-weight: lighter;
             font-size: 1.55vw;
         }
@@ -69,28 +68,29 @@ footer a {
 section {
         padding: 60px;
     }
-    .hero {
+.hero {
         background-image: url("../images/hero-bg.jpg");
         display: flex;
         background-size: cover;
         background-position: center;
         justify-content: center;
         flex-wrap: wrap;
-        
+        align-items: flex-start;
     }
 .hero-form{
             background-color: #fce138;
             padding: 20px;
             color: #024e76;
             border: solid 3px #024e76;
+            width: 3.5%;
+            margin: 3.5%;
         }
 .hero-form h3{
     font-size: 24px;
     margin: 0;
     }
 .hero-form p{
-    margin: 3.5%;
-    width: 40%;
+    margin: 5px 0 15px;
     }
 .form-input{
     border: 1px solid #024e76;
@@ -101,7 +101,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     }
-    .hero-form label{
+.hero-form label{
         margin: 0 5px;
     }
 .hero-form button{
@@ -111,15 +111,15 @@ section {
         padding: 10px 20px;
         font-size: 16px;
     }
-    .hero-cta {
+.hero-cta {
         width: 35%;
         text-align: right;
         margin: 3.5%;
         color: #fff;
         font-size: 18px;
-        line-height: 1.3;
+        line-height: 1.2;
       }
-    .hero-cta h2 {
+.hero-cta h2 {
         font-style: italic;
         font-size: 55px;
         color: #fce138;
@@ -145,52 +145,51 @@ section {
         align-items: center;
         justify-content: space-between;
     }
-
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     margin-bottom: 35px;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
-  }
+    }
 .primary-border {
     border-color: #fce138;
-  }
+    }
 .secondary-border {
     border-color: #39a6b2;
-  }
+    }
 .step h3 {
     color: #024e76;
     font-size: 46px;
     flex: 1 30%;
-  }
+    }
 .step-info{
     flex: 2 70%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-}
+    }
 .step-img {
     flex: 1 12%;
     margin-right: 20px;
-}
+    }
 .step-text {
     flex: 12;
-}
+    }
 .step-img img {
     max-width: 100%;
-  }
+    }
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
-  }
+    }
 .step-text p {
     color: #39a6b2;
     font-size: 18px;
-  }
+    }
 
 .trainers {
     
@@ -200,48 +199,44 @@ section {
     margin: 20px;
     background: #024e76;
     color: #fce138;
-    
-  }
+    }
 .trainer img {
     width: 100%;
-    
-  }
+    }
 .trainer-bio {
     padding: 25px;    
     line-height: 1.3;
-  }
+    }
 .text-left {
     text-align: left;
-  }
+    }
 .trainers {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-  }
-  
+    }
 .text-right {
     text-align: right;
-  }
+    }
 .trainer-bio h3{
     font-size: 28px;
-}
+    }
 .trainer-bio h4{
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
-}
+    }
 .trainer-bio p{
     font-size: 17px;
-
-}
+    }
 .contact {
     background: #024e76;
-}
+    }
 .contact h2{
     color: #fce138;
-}
+    }
 .contact-info > * {
     flex: 1;
     margin: 15px;
@@ -250,12 +245,12 @@ section {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
+    }
 .contact-info iframe{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
+    }
 .contact-info div{
     color: white;
 }
@@ -278,7 +273,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
-}
+    }
 .contact-form button{
     width: 100%;
     border: none;
@@ -287,10 +282,23 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
-}
+    }
 .contact-info a {
     color: #fce138;
-  }
+    }
 .flex-row {
     display: flex;
-  }
+    }
+@media screen and (max-width: 980px){
+
+    }
+@media screen and (max-width: 768px){
+        header h1{
+            font-size: 80px;
+        }
+    }
+@media screen and (max-width: 575px){
+        header h1{
+            font-size: 100px;
+        }
+    }
