--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,26 @@ section {
 .flex-row {
     display: flex;
     }
+.service-grid-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 100px);
+        grid-gap: 10px;
+    }
+.service-grid-item{
+        background-color: orange;
+        border: solid;
+        padding: 1em;
+        color: black;
+    }
+.box1{
+    grid-column: 1/ span 1; 
+    grid-row: 1/ span 2; 
+    }
+.box2 {
+        grid-column: 3/4; 
+        grid-row: 1/-1; 
+    }
 @media screen and (max-width: 980px){
         header{
           padding-bottom: 0;
@@ -371,13 +391,4 @@ section {
           order: 3;
       }
     }
-    .service-grid-container{
-        display: grid;
-    }
-    .service-grid-item{
-        width: 200px;
-        height: 50px;
-        background-color: orange;
-        border: solid;
-        color: black;
-    }
+    
