--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,21 @@ header {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        position: sticky;
+        top: 0;
+        position: -webkit-sticky;
+        background-image: url("../images/hero-bg.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-position: 80%;
         }
 header h1 {
             font-weight: bold;
             font-size: 36px;
             color: #fce138;
             margin: 0;
-            
+            text-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
         }
 header a {
             text-decoration: none;
@@ -30,7 +38,17 @@ header nav ul li a {
             padding: 10px 15px;
             font-weight: lighter;
             font-size: 1.55vw;
+            text-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
         }
+header nav ul li a:hover {
+            background: #fce138;
+            color: #024e76;
+            border-radius: 15px;
+            text-shadow: none;
+        }
+.hero-form button:hover {
+            background-color: #39a6b2;  
+          }
 body{
      /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
@@ -76,31 +94,41 @@ section {
         justify-content: center;
         flex-wrap: wrap;
         align-items: flex-start;
+        background-attachment: fixed;
+        background-position: 80%;
     }
 .hero-form{
-            background-color: #fce138;
+            background-color: rgb(252, 225, 56, 0.5);
             padding: 20px;
             color: #024e76;
             border: solid 3px #024e76;
             width: 40%;
             margin: 3.5%;
+            box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
+            border-radius: 15px;
         }
 .hero-form h3{
-    font-size: 24px;
-    margin: 0;
+        font-size: 24px;
+        margin: 0;
     }
 .hero-form p{
-    margin: 5px 0 15px;
+        margin: 5px 0 15px;
     }
 .form-input{
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
+        border: 1px solid #024e76;
+        display: block;
+        padding: 7px 15px;
+        font-size: 16px;
+        color: #024e76;
+        width: 100%;
+        margin-bottom: 15px;
+        border-radius: 10px;
+        background-color: rgba(255,255,255, 0.75);
     }
+.form-input:focus {
+        background-color: rgba(255,255,255, 1);
+        outline: none;
+      }
 .hero-form label{
         margin: 0 5px;
     }
@@ -110,6 +138,7 @@ section {
         border: none;
         padding: 10px 20px;
         font-size: 16px;
+        border-radius: 10px;
     }
 .hero-cta {
         width: 35%;
@@ -118,6 +147,7 @@ section {
         color: #fff;
         font-size: 18px;
         line-height: 1.2;
+        text-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
       }
 .hero-cta h2 {
         font-style: italic;
@@ -139,12 +169,19 @@ section {
         margin: 50px auto;
         padding-bottom: 50px;
         width: 80%;
-        border-bottom: 1px solid #39a6b2;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
+        border-bottom: 1px solid #39a6b2;
+        border-bottom: 1px solid #39a6b2;
     }
+.step:last-child{
+    border-bottom: none;
+}
+.step:nth-child(even){
+    border-bottom: 1px solid #39a6b2;
+}
 .section-title{
     font-size: 48px;
     color: #024e76;
@@ -190,10 +227,6 @@ section {
     color: #39a6b2;
     font-size: 18px;
     }
-
-.trainers {
-    
-  }
 .trainer {
     flex: 1;
     margin: 20px;
@@ -273,6 +306,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+    outline: none;
+    }
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
     }
 .contact-form button{
     width: 100%;
@@ -282,10 +322,15 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
     }
 .contact-info a {
     color: #fce138;
     }
+.contact-form button:hover {
+        color: #fce138;
+        background: #39a6b2;
+      }
 .flex-row {
     display: flex;
     }
@@ -339,6 +384,7 @@ section {
         header{
           padding-bottom: 0;
           justify-content: center;
+          position: relative;
         }
         header h1{
             width: 100%;
@@ -395,17 +441,16 @@ section {
         }
         .service-grid-container {
             grid-template-columns: 1fr 1fr;
-          }
-        
-          .service-grid-item.basic {
+        }
+        .service-grid-item.basic {
             grid-column: 1;
-          }
+        }
         
-          .service-grid-item.both {
+        .service-grid-item.both {
             grid-column: 1 / -1;
           }
         
-          .service-grid-item.cancel {
+        .service-grid-item.cancel {
             transform: none;
             writing-mode: unset;
             grid-column: 1 / -1;
